output/server/_dllproject/DirectExport.h

	QTTESTINGSERVER_EXPORT void pushModuleConstants(ni_ModuleRef m);
	QTTESTINGSERVER_EXPORT void popUInt32Array(uint32_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushInt64(int64_t x);
	QTTESTINGSERVER_EXPORT int64_t popInt64();
	QTTESTINGSERVER_EXPORT void pushInt64Array(int64_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popInt64Array(int64_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushUInt64(uint64_t x);
	QTTESTINGSERVER_EXPORT uint64_t popUInt64();
	QTTESTINGSERVER_EXPORT void pushUInt64Array(uint64_t* values, size_t count);
	QTTESTINGSERVER_EXPORT void popUInt64Array(uint64_t** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushFloat(float x);
	QTTESTINGSERVER_EXPORT float popFloat();
	QTTESTINGSERVER_EXPORT void pushFloatArray(float* values, size_t count);
	QTTESTINGSERVER_EXPORT void popFloatArray(float** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushDouble(double x);
	QTTESTINGSERVER_EXPORT double popDouble();
	QTTESTINGSERVER_EXPORT void pushDoubleArray(double* values, size_t count);
	QTTESTINGSERVER_EXPORT void popDoubleArray(double** values, size_t* count);
	QTTESTINGSERVER_EXPORT void pushString(const char* str, size_t length);
	QTTESTINGSERVER_EXPORT void popString(const char** strPtr, size_t* length);
	QTTESTINGSERVER_EXPORT void pushStringArray(const char** strs, size_t* lengths, size_t count);
	QTTESTINGSERVER_EXPORT void popStringArray(const char*** strs, size_t** lengths, size_t* count);
	QTTESTINGSERVER_EXPORT void pushBuffer(int id, bool isClientId, ni_BufferDescriptor* descriptor);
	QTTESTINGSERVER_EXPORT void popBuffer(int* id, bool* isClientId, ni_BufferDescriptor* descriptor);
	QTTESTINGSERVER_EXPORT void pushClientFunc(int id);
	QTTESTINGSERVER_EXPORT int popServerFunc();
	QTTESTINGSERVER_EXPORT void execServerFunc(int id);
	QTTESTINGSERVER_EXPORT ni_ExceptionRef execServerFuncWithExceptions(int id);
	QTTESTINGSERVER_EXPORT void invokeInterfaceMethod(ni_InterfaceMethodRef method, int serverID);
	QTTESTINGSERVER_EXPORT ni_ExceptionRef invokeInterfaceMethodWithExceptions(ni_InterfaceMethodRef method, int serverID);
	QTTESTINGSERVER_EXPORT void pushInstance(int id, bool isClientId);
	QTTESTINGSERVER_EXPORT int popInstance(bool* isClientId);
	QTTESTINGSERVER_EXPORT void pushNull();
	QTTESTINGSERVER_EXPORT void releaseServerResource(int id);
	QTTESTINGSERVER_EXPORT void clearServerSafetyArea(); // clear server resources from safety area (protects values being returned with no other shared_ptrs existing)
	QTTESTINGSERVER_EXPORT void dumpTables();
	QTTESTINGSERVER_EXPORT void setException(ni_ExceptionRef e);